--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Device Properties Example</title>
+    <title>Cordova Base Plugin geolocation</title>
+		<link href="css/ratchet.min.css" rel="stylesheet" />
 
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8">
@@ -42,6 +43,21 @@
     </script>
   </head>
   <body>
-    <p id="deviceProperties">Loading device properties...</p>
+		<header class="bar bar-nav">
+			<h1 class="title">Cordova Base Plugin geolocation</h1>
+		</header>
+		
+		<section>
+			<p id="deviceProperties">Loading device properties...</p>
+		</section>
+		
+		<footer>
+			<nav class="bar bar-tab">
+				<a class="tab-item" href="index.html">
+					<span class="icon icon-home"></span>
+					<span class="tab-label">Home</span>
+				</a>
+			</nav>
+		</footer>
   </body>
 </html>
