--- a/www/index.html
+++ b/www/index.html
@@ -6,40 +6,38 @@
 
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8">
+			document.addEventListener("deviceready", onDeviceReady, false);
+			// onSuccess Callback
+			// This method accepts a Position object, which contains the
+			// current GPS coordinates
+			//
+			var onSuccess = function(position) {
+				var element = document.getElementById('deviceProperties');
+				element.innerHTML = '<br />Latitude: '    + position.coords.latitude    			+ '<br />' +
+														'Longitude: '         + position.coords.longitude         + '<br />' +
+														'Altitude: '          + position.coords.altitude          + '<br />' +
+														'Accuracy: '          + position.coords.accuracy          + '<br />' +
+														'Altitude Accuracy: ' + position.coords.altitudeAccuracy  + '<br />' +
+														'Heading: '           + position.coords.heading           + '<br />' +
+														'Speed: '             + position.coords.speed             + '<br />' +
+														'Timestamp: '         + position.timestamp                + '<br />';
+			};
 
-    // Wait for device API libraries to load
-    //
-    document.addEventListener("deviceready", onDeviceReady, false);
-    // onSuccess Callback
-    // This method accepts a Position object, which contains the
-    // current GPS coordinates
-    //
-    var onSuccess = function(position) {
-			var element = document.getElementById('deviceProperties');
-			element.innerHTML = '<br />Latitude: '    + position.coords.latitude    			+ '<br />' +
-													'Longitude: '         + position.coords.longitude         + '<br />' +
-													'Altitude: '          + position.coords.altitude          + '<br />' +
-													'Accuracy: '          + position.coords.accuracy          + '<br />' +
-													'Altitude Accuracy: ' + position.coords.altitudeAccuracy  + '<br />' +
-													'Heading: '           + position.coords.heading           + '<br />' +
-													'Speed: '             + position.coords.speed             + '<br />' +
-													'Timestamp: '         + position.timestamp                + '<br />';
-    };
+			// onError Callback receives a PositionError object
+			//
+			function onError(error) {
+				alert('code: '    + error.code    + '\nmessage: ' + error.message + '\n');
+			}
 
-    // onError Callback receives a PositionError object
-    //
-    function onError(error) {
-        alert('code: '    + error.code    + '\n' +
-              'message: ' + error.message + '\n');
-    }
-
-    // device APIs are available
-    //
-    function onDeviceReady() {
-
-    navigator.geolocation.getCurrentPosition(onSuccess, onError);
-    }
-
+			// device APIs are available
+			//
+			function onDeviceReady() {
+				getcur();
+			}
+			
+			function getcur() {
+				navigator.geolocation.getCurrentPosition(onSuccess, onError);
+			}
     </script>
   </head>
   <body>
@@ -53,7 +51,7 @@
 		
 		<footer>
 			<nav class="bar bar-tab">
-				<a class="tab-item" href="index.html">
+				<a class="tab-item" onclick="javascript:getcur();">
 					<span class="icon icon-home"></span>
 					<span class="tab-label">Home</span>
 				</a>
