--- a/www/index.html
+++ b/www/index.html
@@ -51,7 +51,7 @@
 		
 		<footer>
 			<nav class="bar bar-tab">
-				<a class="tab-item" onclick="javascript:getcur();">
+				<a class="tab-item" href="index.html">
 					<span class="icon icon-home"></span>
 					<span class="tab-label">Home</span>
 				</a>
