--- a/www/index.html
+++ b/www/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <title>Cordova Base Plugin geolocation</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
-    <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+		<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+		<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8">
 			document.addEventListener("deviceready", onDeviceReady, false);
@@ -43,25 +43,35 @@
     </script>
   </head>
   <body>
-		<div data-role="page">
+		<div data-role="page" id="pageone">
 			<div data-role="header">
 				<h1>Cordova Base Plugin geolocation</h1>
 			</div>
-			<!-- /header -->
 
-			<div data-role="content">
-				<div id="deviceProperties" style="margin-top: 50px;">
-				<label for="txtNum1">Num 1:</label>
-				<input id="txtNum1" name="txtNum1" type="text" value="" />
-				<label for="txtNum2">Num 2:</label>
-				<input id="txtNum2" name="txtNum2" type="text" value="" /> <a data-inline="true" data-role="button">Add </a> Result : <label id="lblResult"></label>
+			<div data-role="main" class="ui-content">
+				<p>Click on the link to see the pop effect.</p>
+				<a href="#pagetwo" data-transition="pop">Pop to Page Two</a>
+				<div id="deviceProperties" style="margin-top: 50px;"></div>
 			</div>
-			<!-- /content -->
-
+			
 			<div data-role="footer">
-				<h4>Code Handbook</h4>
+				<h1>Footer Text</h1>
 			</div>
 		</div>
-		<!-- /page -->
+		
+		<div data-role="page" id="pagetwo">
+		<div data-role="header">
+			<h1>Welcome To My Homepage</h1>
+		</div>
+
+		<div data-role="main" class="ui-content">
+			<p>Click on the link to go back. <b>Note</b>: fade is default.</p>
+			<a href="#pageone">Go to Page One</a>
+		</div>
+
+		<div data-role="footer">
+			<h1>Footer Text</h1>
+		</div>
+	</div>
 	</body>
 </html>
