--- a/www/index.html
+++ b/www/index.html
@@ -45,7 +45,7 @@
   </head>
   <body>
 		<div data-role="page">
-			<div data-role="header">
+			<div data-role="header" data-position="fixed">
 				<h1>Cordova Base Plugin geolocation</h1>
 			</div>
 			
@@ -53,7 +53,7 @@
 				<div id="geoInfo">Loading Current Position ...</div>
 			</div>
 			
-			<div data-role="footer">
+			<div data-role="footer" data-position="fixed">
 				<h1><a href="index.html">Footer Text</a></h1>
 			</div>
 		</div>
