--- a/www/index.html
+++ b/www/index.html
@@ -49,7 +49,7 @@
 				<h1>Cordova Base Plugin geolocation</h1>
 			</div>
 			
-			<div data-role="main" class="ui-content">
+			<div data-role="main" data-position="fixed">
 				<div id="geoInfo">Loading Current Position ...</div>
 			</div>
 			
