--- a/www/index.html
+++ b/www/index.html
@@ -48,7 +48,7 @@
 				<h1>Cordova Base Plugin geolocation</h1>
 			</div>
 			
-			<div data-role="content" class="ui-content">
+			<div data-role="content" class="ui-content" style="background-color: yellow;">
 				<br /><br /><br /><br /><br /><br /><br /><br /><br />
 				<div id="device">Device loadin ...</div>
 				<div id="geoInfo"></div>
