--- a/www/index.html
+++ b/www/index.html
@@ -44,7 +44,7 @@
   </head>
   <body>
 		<div data-role="page">
-			<div data-role="header" data-position="fixed">
+			<div data-role="header" data-position="fixed" style="height: 100px;">
 				<h1>Cordova Base Plugin geolocation</h1>
 			</div>
 			
