--- a/www/index.html
+++ b/www/index.html
@@ -44,8 +44,9 @@
   </head>
   <body>
 		<div data-role="page">
-			<div data-role="header" data-position="fixed" style="height: 100px;">
+			<div data-role="header" data-position="fixed" style="height:50px;">
 				<h1>Cordova Base Plugin geolocation</h1>
+				<a href="index.html" data-icon="home">Home</a>
 			</div>
 			
 			<div data-role="content" class="ui-content" style="background-color: yellow;">
