--- a/www/index.html
+++ b/www/index.html
@@ -44,7 +44,7 @@
   </head>
   <body>
 		<div data-role="page">
-			<div data-role="header" data-position="fixed" style="height:50px;">
+			<div data-role="header" data-position="fixed" style="padding-top:20px; zheight:60px;">
 				<h1>Cordova Base Plugin geolocation</h1>
 				<a href="index.html" data-icon="home">Home</a>
 			</div>
