--- a/www/index.html
+++ b/www/index.html
@@ -44,9 +44,8 @@
   </head>
   <body>
 		<div data-role="page">
-			<div data-role="header" data-position="fixed" style="padding-top:20px; zheight:60px;">
+			<div data-role="header" data-position="fixed" style="padding-top:10px;">
 				<h1>Cordova Base Plugin geolocation</h1>
-				<a href="index.html" data-icon="home">Home</a>
 			</div>
 			
 			<div data-role="content" class="ui-content" style="background-color: yellow;">
