--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,8 @@
 		<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
 		<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 		<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-    
+		<script src="http://maps.google.com/maps/api/js?key=AIzaSyCIAkO_qU8Z3PUpjP26_7i3phsSI9l2fpM"></script>
+   
 		<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8">
 			document.addEventListener("deviceready", onDeviceReady, false);
@@ -21,24 +22,28 @@
 			
 			function getcur() 
 			{
-				navigator.geolocation.getCurrentPosition(onSuccess, onError,{ maximumAge: 1000, timeout: 5000, enableHighAccuracy: true } );
+				navigator.geolocation.getCurrentPosition(onSuccess, onError, { maximumAge: 1000, timeout: 5000, enableHighAccuracy: true } );
 			}
 			
 			var onSuccess = function(position) 
 			{
-				$('#geoInfo').html('Latitude: ' + position.coords.latitude 					+ '<br />' +
-									'Longitude: '         + position.coords.longitude         + '<br />' +
-									'Altitude: '          + position.coords.altitude          + '<br />' +
-									'Accuracy: '          + position.coords.accuracy          + '<br />' +
-									'Altitude Accuracy: ' + position.coords.altitudeAccuracy  + '<br />' +
-									'Heading: '           + position.coords.heading           + '<br />' +
-									'Speed: '             + position.coords.speed             + '<br />' +
-									'Timestamp: '         + position.timestamp                + '<br />');
+				var lat = position.coords.latitude;
+				var lon = position.coords.longitude;
+				$('#geoInfo').html('Latitude: ' + lat + '<br />Longitude: ' + lon);
+				showMap(lat, lon);
 			};
 
 			function onError(error) 
 			{
 				$('#geoInfo').html('ERROR<br />Code: ' + error.code + '<br />Message: ' + error.message);
+			}
+			
+			function showMap(latitude, longitude)
+			{
+				var LatLng = new google.maps.LatLng(latitude, longitude);
+				var mapConfig = {zoom:15, center:LatLng, mapTypeId:google.maps.MapTypeId.ROADMAP}
+				var map = new google.maps.Map($('#map').get(0), mapConfig);
+				new google.maps.Marker({map:map, position:LatLng, animation: google.maps.Animation.DROP});
 			}
     </script>
   </head>
@@ -51,6 +56,8 @@
 			<div data-role="content" class="ui-content" style="background-color: yellow;">
 				<div id="device">Device loadin ...</div>
 				<div id="geoInfo"></div>
+				<div id="address"></div>
+				<div id="map" style="border: 1px solid; height:300px; width: 100%;">
 			</div>
 			
 			<div data-role="footer" data-position="fixed">
