--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,7 @@
 			
 			function onDeviceReady() 
 			{
+				$('#geoInfo').html('onDeviceReady');
 				setHeightScreen();
 				//$('#device').html('Device ready');
 				$('#geoInfo').html('Loading Current Position ...');
