--- a/www/index.html
+++ b/www/index.html
@@ -68,7 +68,7 @@
 				localisation.geocode({"latLng" : LatLng}, function(address, status)
 				{
 					if (status == google.maps.GeocoderStatus.OK) 
-						$('#address').html('Address: ' + address[0].formatted_address);
+						$('#address').html(address[0].formatted_address);
 				});
 			}
 		</script>
@@ -81,13 +81,21 @@
 			
 			<div data-role="content" class="ui-content" style="background-color: yellow;">
 				<!-- <div id="device">Device loadin ...</div> -->
-				<div id="geoInfo"></div>
-				<div id="address"></div>
+				<table>
+					<tr>
+						<td valign="top">Info: </td>
+						<td><div id="geoInfo"></div></td>
+					</tr>
+					<tr>
+						<td>Address: </td>
+						<td><div id="address"></div></td>
+					</tr>
+				</table>
 				<div id="map" style="border: 1px solid; height:300px; width: 100%;"></div>
 			</div>
 			
 			<div data-role="footer" data-position="fixed">
-				<button onclick="javascript:onDeviceReady();" id="refresh" data-icon="refresh">Refresh</button>
+				<h1><button onclick="javascript:onDeviceReady();" id="refresh" data-icon="refresh">Refresh</button></h1>
 			</div>
 		</div>
 	</body>
