--- a/www/index.html
+++ b/www/index.html
@@ -87,15 +87,15 @@
 						<td><div id="geoInfo"></div></td>
 					</tr>
 					<tr>
-						<td>Address: </td>
+						<td valign="top">Address: </td>
 						<td><div id="address"></div></td>
 					</tr>
 				</table>
 				<div id="map" style="border: 1px solid; height:300px; width: 100%;"></div>
 			</div>
 			
-			<div data-role="footer" data-position="fixed">
-				<h1><button onclick="javascript:onDeviceReady();" id="refresh" data-icon="refresh">Refresh</button></h1>
+			<div data-role="footer" data-position="fixed" style="text-align: center;">
+				<button onclick="javascript:onDeviceReady();" id="refresh" data-icon="refresh">Refresh</button></h1>
 			</div>
 		</div>
 	</body>
