--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+	<head>
     <title>Cordova Base Plugin geolocation</title>
 		<meta name="viewport" id="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no;" />
 		
@@ -21,7 +21,7 @@
 			</div>
 			
 			<div data-role="content" class="ui-content" style="background-color: yellow;">
-				<table>
+				<table id="info">
 					<tr>
 						<td valign="top">Info: </td>
 						<td><div id="geoInfo"></div></td>
