--- a/www/index.html
+++ b/www/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Cordova Base Plugin geolocation</title>
+    <title>Cordova Base Plugin geolocation</title>
 		<meta name="viewport" id="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no;" />
 		
 		<script src="http://maps.google.com/maps/api/js?key=AIzaSyCIAkO_qU8Z3PUpjP26_7i3phsSI9l2fpM"></script>
 		
-		<link rel="stylesheet" href="//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
-		<script src="//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-		<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-		
+  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+  <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+  <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+   
 		<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+		
 		<script type="text/javascript" src="js/index.js"></script>
-	</head>
-	<body>
+  </head>
+  <body>
 		<div data-role="page" id="page1">
 			<div data-role="header" data-position="fixed" style="padding-top:10px;">
 				<h1>Cordova Base Plugin geolocation</h1>
