--- a/www/index.html
+++ b/www/index.html
@@ -1,38 +1,32 @@
 <!DOCTYPE html>
 <html>
 	<head>
-    <title>Cordova Base Plugin geolocation</title>
-		<meta name="viewport" id="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no;" />
+		<title>ShuOu</title>
+		<meta name="viewport" id="viewport" content="width=device-width, height=device-height, initial-scale=1.0" />
+		
+		<style>
+			.ui-title {	margin: 0 10px !important; }
+			.ui-header{	padding-top: 10px !important;	}
+		</style>
+		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
 		
 		<script src="http://maps.google.com/maps/api/js?key=AIzaSyCIAkO_qU8Z3PUpjP26_7i3phsSI9l2fpM"></script>
+		<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+		<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 		
-  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
-  <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-  <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-   
 		<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-		
 		<script type="text/javascript" src="js/index.js"></script>
-  </head>
-  <body>
+	</head>
+	<body>
+		
 		<div data-role="page" id="page1">
-			<div data-role="header" data-position="fixed" style="padding-top:10px;">
-				<h1>Cordova Base Plugin geolocation</h1>
+			<div data-role="header" data-position="fixed">
+				<a href="#page2" data-role="button" data-icon="arrow-r" data-inline="true">Geo Info</a>
+				<h1>ShuOu</h1>
 			</div>
 			
-			<div data-role="content" class="ui-content" zstyle="background-color: yellow;">
-				<table id="info">
-					<tr>
-						<td valign="top">Info: </td>
-						<td>
-							<div id="geoInfo"></div>
-						</td>
-					</tr>
-					<tr>
-						<td valign="top">Address: </td>
-						<td><div id="address"></div></td>
-					</tr>
-				</table>
+			<div data-role="content" class="ui-content">
+				<div id="geoAddress"></div>
 				<div id="map" style="border: 1px solid; height:300px; width: 100%;"></div>
 			</div>
 			
@@ -40,5 +34,30 @@
 				<button onclick="javascript:onDeviceReady();" id="refresh" data-icon="refresh">Refresh</button></h1>
 			</div>
 		</div>
+		
+		<div data-role="page" id="page2">
+		
+			<div data-role="header" data-position="fixed">
+				<a href="#page1" data-role="button" data-icon="arrow-l" data-inline="true">Map</a>
+				<h1>ShuOu - Info</h1>
+			</div>
+			
+			<div data-role="content" class="ui-content">
+				<table cellpadding="5" border="1" class="ui-responsive" id="my-table">
+					<tr><td align="right">Latitude:</td><td><div id="geoLatitude"></div></td></tr>
+					<tr><td align="right">Longitude:</td><td><div id="geoLongitude"></div></td></tr>
+					<tr><td align="right">Altitude:</td><td><div id="geoAltitude"></div></td></tr>
+					<tr><td align="right">Accuracy:</td><td><div id="geoAccuracy"></div></td></tr>
+					<tr><td align="right">Altitude Accuracy:</td><td><div id="geoAlAc"></div></td></tr>
+					<tr><td align="right">Speed:</td><td><div id="geoSpeed"></div></td></tr>
+					<tr><td align="right">Timestamp:</td><td><div id="geoTimestamp"></div></td></tr>
+				</table>
+			</div>
+			
+			<div data-role="footer" data-position="fixed" style="text-align:center;">
+				<button onclick="javascript:onDeviceReady();" id="refresh" data-icon="refresh">Refresh</button></h1>
+			</div>
+		</div>
+		
 	</body>
 </html>
