--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
 			</div>
 			
 			<div data-role="content" class="ui-content" id="p1Content" zstyle="background-color: yellow;">
-				<div id="geoAddress" style="height:50px;"></div>
+				<div id="geoAddress" zstyle="height:50px;"></div>
 				<div id="map" style="border: 1px solid; height:50px; width: 100%;"></div>
 			</div>
 			
